# fai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
fai/: __init__.py  read.py  read_fasta.py  read_sam.py
fai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_deserialize.py  test_example.py
tests/fixtures/: micro.fasta  micro.sam  teste.sam
